6.7/api/Files/PythonWorker_8h.md
---
title: Libs/Application/Job/PythonWorker.h

---

# Libs/Application/Job/PythonWorker.h



## Namespaces

| Name           |
| -------------- |
| **[shapeworks](../Namespaces/namespaceshapeworks.md)** <br>User usage reporting (telemetry)  |

## Classes

|                | Name           |
| -------------- | -------------- |
| class | **[shapeworks::PythonWorker](../Classes/classshapeworks_1_1PythonWorker.md)**  |




## Source code

```cpp
#pragma once

// qt
#include <QObject>
#include <QSharedPointer>

// vtk
#include <vtkSmartPointer.h>

// studio
#include <Job/Job.h>
#include <Libs/Application/ShapeWorksVtkOutputWindow.h>

namespace shapeworks {
class PythonLogger;

class PythonWorker : public QObject {
  Q_OBJECT

 public:
  constexpr static const char* python_api_version = "6.6";

  PythonWorker();
  ~PythonWorker();

  void set_vtk_output_window(vtkSmartPointer<ShapeWorksVtkOutputWindow> output_window);
  void set_cli_mode(bool cli_mode);

  void run_job(QSharedPointer<Job> job);
  void set_current_job(QSharedPointer<Job> job);

  void incoming_python_message(std::string message_string);
  void incoming_python_progress(double value, std::string message);

  void end_python();

  void abort_job();

 public Q_SLOTS:

  bool init();

  void start_job(QSharedPointer<Job> job);

  void finalize_python();

 Q_SIGNALS:

  void result_ready();
  void finished();

 private:
  bool initialized_ = false;
  bool initialized_success_ = false;

  vtkSmartPointer<ShapeWorksVtkOutputWindow> studio_vtk_output_window_;

  QSharedPointer<PythonLogger> python_logger_;

  QSharedPointer<Job> current_job_;

  QThread* thread_{nullptr};
};
}  // namespace shapeworks
```


-------------------------------

Updated on 2025-09-20 at 02:22:47 +0000
